@@ -39,6 +39,7 @@ Change Log
     - Pong uses a SuperBitmap as its display.
     - WoopsiArray doubles in size each time it needs to grow instead of
       increasing by 100.
+    - ScrollingPanel::scroll() uses the new rendering system.
 
   - New Features:
     - Added makefile for demo - can now be built from command line.
